@startuml class_diagram_view
skinparam classAttributeIconSize 0
skinparam dpi 150
skinparam packageStyle rectangle

title VIEW LAYER - Class Diagram

package "View" {
    
    package "interfaces" #LightBlue {
        interface IView {
            +initialize() : bool
            +shutdown() : void
            +isRunning() : bool
            +processEvents() : void
            +render() : void
        }
        
        interface IWindowComponent {
            +render() : void
        }
        
        interface ILifecycleManager {
            +initialize(width, height, title) : bool
            +shutdown() : void
            +processEvents(running) : void
            +beginFrame() : void
            +endFrame() : void
        }
        
        interface IAssetManager {
            +clearCache() : void
            +drawAlbumCover(dl, pos, size, cacheKey, data) : void
        }
    }
    
    package "managers" #LightGreen {
        class LifecycleManager {
            -mWindow : SDL_Window*
            -mRenderer : SDL_Renderer*
            -mInitialized : bool
            +LifecycleManager()
            +initialize(width, height, title) : bool
            +shutdown() : void
            +processEvents(running) : void
            +getWindow() : SDL_Window*
            +getRenderer() : SDL_Renderer*
            +getWindowWidth() : int
            +getWindowHeight() : int
            +beginFrame() : void
            +endFrame() : void
            -setupStyle() : void
        }
        
        class AssetManager {
            -mRenderer : SDL_Renderer*
            -mCoverCache : map<string, SDL_Texture*>
            +AssetManager(renderer)
            +clearCache() : void
            +drawAlbumCover(dl, pos, size, cacheKey, data) : void
            -createTextureFromMemory(data) : SDL_Texture*
        }
    }
    
    package "maincontent" #LightYellow {
        class MainContent {
            -mController : IAppController*
            -mPlayerState : IPlayerState*
            -mAssetManager : AssetManager*
            -mSearchQuery : char[256]
            -mMainTabIndex : int
            -mShowPlaylistDetail : bool
            -mSelectedPlaylistIndex : int
            -mViewMode : ViewMode
            -mPlaylistManager : PlaylistManager
            +MainContent(controller, playerState, assetManager)
            +render() : void
            +setPlaylist(playlist) : void
            -renderSearch() : void
            -renderTabs() : void
            -renderMusicTab(mainW, contentH) : void
            -renderPlaylistTab() : void
            -renderPlaylistDetailView() : void
            -renderCreatePlaylistModal() : void
            -renderEditPlaylistModal() : void
            -renderDeleteConfirmModal() : void
            -renderAddToPlaylistMenu() : void
        }
        
        class PlaylistData <<struct>> {
            +name : string
            +desc : string
            +colorIdx : int
            +trackPaths : vector<string>
        }
        
        class PlaylistManager {
            -mPlaylists : vector<PlaylistData>
            -mDefaultPlaylistsPopulated : bool
            +PlaylistManager()
            +createPlaylist(name, desc, colorIdx) : void
            +updatePlaylist(idx, name, desc, colorIdx) : void
            +deletePlaylist(idx) : void
            +addTrackToPlaylist(playlistIdx, trackPath) : void
            +removeTrackFromPlaylist(playlistIdx, trackIdx) : void
            +getPlaylistCount() : size_t
            +getPlaylist(idx) : PlaylistData&
            +getPlaylistMutable(idx) : PlaylistData&
            +getAllPlaylists() : vector<PlaylistData>&
            +populateDefaultPlaylists(controller) : void
            +isDefaultPopulated() : bool
        }
        
        enum ViewMode {
            NORMAL
            CREATE_PLAYLIST
            EDIT_PLAYLIST
        }
    }
    
    package "rightsidebar" #LightCoral {
        class RightSidebar {
            -mController : IAppController*
            -mPlayerState : IPlayerState*
            -mAssetManager : AssetManager*
            -mPlaylistDisplay : vector<string>
            -mRightTabIndex : int
            -mConnectionHelper : ConnectionPanelHelper
            -mStorageHelper : StoragePanelHelper
            +RightSidebar(controller, playerState, assetManager)
            +render() : void
            +setPlaylist(playlist) : void
            -renderNowPlaying(dl) : void
            -renderTabs() : void
            -renderQueue(dl, width, currentTrack) : void
            -renderRecent(dl, width) : void
            -renderConnectionPanel() : void
            -renderStoragePanel() : void
        }
        
        class ConnectionPanelHelper {
            -mPorts : vector<string>
            -mSelectedIndex : int
            -mPortBuffer : char[128]
            +refresh(controller) : void
            +getSelectedPort() : string
            +getSelectedIndex() : int
            +setSelectedIndex(idx) : void
            +getPorts() : vector<string>&
            +getPortBuffer() : char*
        }
        
        class StoragePanelHelper {
            -mDevices : vector<StorageDevice>
            -mSelectedIndex : int
            -mBuffer : char[128]
            +refresh(controller) : void
            +getSelectedPath() : string
            +getSelectedIndex() : int
            +setSelectedIndex(idx) : void
            +getDevices() : vector<StorageDevice>&
            +getDisplayBuffer() : char*
        }
    }
    
    package "playerbar" #Lavender {
        class PlayerBar {
            -mController : IAppController*
            -mPlayerState : IPlayerState*
            -mAssetManager : AssetManager*
            -mWasPlaying : bool
            -mPlayStartTime : time_point
            -mPlayStartPos : uint32_t
            -mLastTrackPath : string
            -mLastTrack : int
            -mIsDraggingSlider : bool
            -mLastPlaybackVersion : uint32_t
            +PlayerBar(controller, playerState, assetManager)
            +render() : void
            +update(windowWidth, windowHeight) : void
            -stripExtension(name) : string
        }
    }
    
    ' Main facade class
    class ImGuiView <<facade>> {
        -mController : IAppController*
        -mPlayerState : IPlayerState*
        -mLifecycle : LifecycleManager
        -mAssetManager : AssetManager
        -mMainContent : MainContent
        -mRightSidebar : RightSidebar
        -mPlayerBar : PlayerBar
        -mRunning : bool
        -mPlaylistDirty : atomic<bool>
        +ImGuiView(controller, playerState)
        +initialize() : bool
        +shutdown() : void
        +isRunning() : bool
        +processEvents() : void
        +render() : void
        -updatePlaylistData() : void
    }
    
    ' Interface implementations
    ImGuiView ..|> IView
    LifecycleManager ..|> ILifecycleManager
    AssetManager ..|> IAssetManager
    MainContent ..|> IWindowComponent
    RightSidebar ..|> IWindowComponent
    PlayerBar ..|> IWindowComponent
    
    ' Composition relationships
    ImGuiView *-- LifecycleManager
    ImGuiView *-- AssetManager
    ImGuiView *-- MainContent
    ImGuiView *-- RightSidebar
    ImGuiView *-- PlayerBar
    
    ' Internal compositions
    MainContent *-- PlaylistManager
    MainContent --> PlaylistData : manages
    RightSidebar *-- ConnectionPanelHelper
    RightSidebar *-- StoragePanelHelper
}

@enduml
